cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8.txt
../dataset/june2020_dataset_copy/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/gui/view/RunnerGUI.java:229: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.OutputStream $$ regular method exit $$ ( 8056, 8465 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
		OutputStream out = new OutputStream() {
		             ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/parser/SircaCSVParser.java:33: error: (required.method.not.called) $$ 4 $$ method close $$ csvReader $$ au.com.bytecode.opencsv.CSVReader $$ regular method exit $$ ( 1237, 1305 ) $$ @MustCall method close may not have been invoked on csvReader or any of its aliases.
			csvReader = new CSVReader(new FileReader(csvFilename), ',', '\'', 2);
			          ^
  The type of object is: au.com.bytecode.opencsv.CSVReader.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url708d477f92_zSakare_SENG3011_tgz-pJ8-test_runner_TestRunnerJ8/src/main/parser/SircaCSVParser.java:33: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(csvFilename) $$ java.io.FileReader $$ regular method exit $$ ( 1263, 1290 ) $$ @MustCall method close may not have been invoked on new FileReader(csvFilename) or any of its aliases.
			csvReader = new CSVReader(new FileReader(csvFilename), ',', '\'', 2);
			                          ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
